--- a/templates/control_panel/create-new-user.html
+++ b/templates/control_panel/create-new-user.html
@@ -328,8 +328,8 @@
 									</div>
 									<div class="col">
 										<div class="form-group">
-											<button style="float: right;" class="btn btn-primary" type="submit">Create
-												User
+											<button style="float: right;" class="btn btn-primary" type="submit"><a
+													class="fa fa-user-plus"></a>
 											</button>
 										</div>
 									</div>
