--- a/templates/control_panel/our-services.html
+++ b/templates/control_panel/our-services.html
@@ -232,11 +232,11 @@
 							<div class="card-body d-sm-none ">
 								<button style="float: right;" class="btn btn-primary"
 										value="{{ slide.object.id }}" type="submit"
-										name="m-d"><a class="fa fa-angle-down"></a>
+										name="m-d"><a class="fa fa-arrow-down"></a>
 								</button>
 								<button class="btn btn-primary"
 										value="{{ slide.object.id }}" type="submit"
-										name="m-u"><a class="fa fa-angle-up"></a>
+										name="m-u"><a class="fa fa-arrow-up"></a>
 								</button>
 							</div>
 							<div class="card-body d-none d-sm-block">
