--- a/templates/control_panel/users.html
+++ b/templates/control_panel/users.html
@@ -232,8 +232,9 @@
 				<div class="card shadow mb-4">
 					<div class="card-header py-3">
 						<div class="col">
-							<div class="form-group"><a href="create_new_user/" style="float: right;"
-													   class="btn btn-primary">Add New User</a></div>
+							<button style="float: right;" class="btn btn-primary"><a href="create_new_user/"
+																					 class="text-white fa fa-user-plus"></a>
+							</button>
 							<div class="form-group"><h6 class="m-0 font-weight-bold text-primary">Users Data Tables</h6>
 							</div>
 						</div>
