--- a/templates/control_panel/change-user-data.html
+++ b/templates/control_panel/change-user-data.html
@@ -332,7 +332,7 @@
 								<div class="col">
 									<div class="form-group">
 										<button style="float: right;" class="btn btn-danger" name="delete"
-												type="submit">Delete This User
+												type="submit"><a class="fa fa-user-alt-slash"></a>
 										</button>
 									</div>
 									<div class="form-group">
