--- a/templates/control_panel/our-services.html
+++ b/templates/control_panel/our-services.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Control Panel</title>
+	<title>Control Panel | Services</title>
 	<!-- Custom fonts for this template-->
 	<link href="{% static 'cpanel/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -228,49 +228,76 @@
 				<form method="POST">
 					{% csrf_token %}
 					<div class="card-deck mb-3">
-						<div class="card">
-							<div class="card-body d-sm-none ">
-								<button style="float: right;" class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-d"><a class="fa fa-arrow-down"></a>
-								</button>
-								<button class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-u"><a class="fa fa-arrow-up"></a>
-								</button>
+						<div class="form-row">
+							{% for service in services %}
+								<div class="mt-4 col-lg-6 col-lg-6">
+									<div class="card card-deck">
+										<div class="card-body d-lg-none ">
+											<button style="float: right;" class="btn btn-primary"
+													value="{{ service.id }}" type="submit"
+													name="m-d"><a class="fa fa-arrow-down"></a>
+											</button>
+											<button class="btn btn-primary"
+													value="{{ service.id }}" type="submit"
+													name="m-u"><a class="fa fa-arrow-up"></a>
+											</button>
+										</div>
+										<div class="card-body d-none d-lg-block">
+											<button style="float: right;" class="btn btn-primary"
+													value="{{ service.id }}" type="submit"
+													name="m-d"><a class="fa fa-angle-right"></a>
+											</button>
+											<button class="btn btn-primary"
+													value="{{ service.id }}" type="submit"
+													name="m-u"><a class="fa fa-angle-left"></a>
+											</button>
+										</div>
+										<img class="card-img" src="{{ service.img.url }}"
+											 alt="Card image cap">
+										<div class="card-body">
+											<div class="input-group mb-5">
+												<div class="custom-file">
+													<input type="file" class="custom-file-input" id="inputGroupFile01"
+														   aria-describedby="inputGroupFileAddon01" name="service-img">
+													<label class="custom-file-label"
+														   for="inputGroupFile01">Service Image</label>
+												</div>
+											</div>
+											<div class="form-row">
+												<div class="col">
+													<div class="form-group"><label><strong>Service
+																						   Title</strong></label><input
+															class="form-control" type="text"
+															placeholder="{{ service.title }}"
+															name="service-title">
+													</div>
+													<div class="form-group"><label><strong>Service
+																						   Description</strong></label><textarea
+															class="form-control" rows="6"
+															placeholder="{{ service.description }}"
+															name="service-description"></textarea></div>
+												</div>
+											</div>
+											<button style="float: right;" class="btn btn-primary"
+													value="{{ service.id }}" type="submit"
+													name="save">Save
+											</button>
+											<button class="btn btn-danger"
+													value="{{ service.id }}" type="submit"
+													name="remove-service">Remove
+											</button>
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+							<div class="mt-4 col-lg-6 col-lg-6">
+								<div class="card">
+									<button type="submit" style="width:100%; height:100%"
+											class="btn btn-success"
+											name="Add-new-service"><strong>+</strong>
+									</button>
+								</div>
 							</div>
-							<div class="card-body d-none d-sm-block">
-								<button style="float: right;" class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-d"><a class="fa fa-angle-right"></a>
-								</button>
-								<button class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-u"><a class="fa fa-angle-left"></a>
-								</button>
-							</div>
-							<img class="card-img" src="https://via.placeholder.com/64"
-								 alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">This is a longer card with supporting text below as a natural
-													 lead-in
-													 to additional content. This content is a little bit longer.</p>
-								<button style="float: right;" class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="save">Save
-								</button>
-								<button class="btn btn-danger"
-										value="{{ slide.object.id }}" type="submit"
-										name="save">Remove
-								</button>
-							</div>
-						</div>
-						<div class="card">
-							<button type="submit" style="width:100%; height:100%"
-									class="btn card-img-bottom btn-success btn-lg btn-block"
-									name="Add-new-video"><strong>+</strong>
-							</button>
 						</div>
 					</div>
 				</form>
