--- a/templates/control_panel/our-services.html
+++ b/templates/control_panel/our-services.html
@@ -225,14 +225,14 @@
 						{% endif %}
 					</div>
 				{% endfor %}
-				<form method="POST">
-					{% csrf_token %}
-					<div class="card-deck mb-3">
-						<div class="form-row">
-							{% for service in services %}
-								<div class="mt-4 col-lg-6 col-lg-6">
-									<div class="card card-deck">
-										<div class="card-body d-lg-none ">
+				<div class="card-deck mb-3">
+					<div class="form-row">
+						{% for service in services %}
+							<div class="mt-4 col-lg-6 col-lg-6">
+								<div class="card card-deck">
+									<div class="card-body d-lg-none ">
+										<form method="POST">
+											{% csrf_token %}
 											<button style="float: right;" class="btn btn-primary"
 													value="{{ service.id }}" type="submit"
 													name="m-d"><a class="fa fa-arrow-down"></a>
@@ -241,8 +241,11 @@
 													value="{{ service.id }}" type="submit"
 													name="m-u"><a class="fa fa-arrow-up"></a>
 											</button>
-										</div>
-										<div class="card-body d-none d-lg-block">
+										</form>
+									</div>
+									<div class="card-body d-none d-lg-block">
+										<form method="POST">
+											{% csrf_token %}
 											<button style="float: right;" class="btn btn-primary"
 													value="{{ service.id }}" type="submit"
 													name="m-d"><a class="fa fa-angle-right"></a>
@@ -251,10 +254,13 @@
 													value="{{ service.id }}" type="submit"
 													name="m-u"><a class="fa fa-angle-left"></a>
 											</button>
-										</div>
-										<img class="card-img" src="{{ service.img.url }}"
-											 alt="Card image cap">
-										<div class="card-body">
+										</form>
+									</div>
+									<img class="card-img" src="{{ service.img.url }}"
+										 alt="Card image cap">
+									<div class="card-body">
+										<form method="POST" enctype="multipart/form-data">
+											{% csrf_token %}
 											<div class="input-group mb-5">
 												<div class="custom-file">
 													<input type="file" class="custom-file-input" id="inputGroupFile01"
@@ -286,33 +292,30 @@
 													value="{{ service.id }}" type="submit"
 													name="remove-service">Remove
 											</button>
-										</div>
+										</form>
 									</div>
 								</div>
-							{% endfor %}
-							<div class="mt-4 col-lg-6 col-lg-6">
-								<div class="card">
-									<button type="submit" style="width:100%; height:100%"
-											class="btn btn-success"
-											name="Add-new-service"><strong>+</strong>
-									</button>
-								</div>
+							</div>
+						{% endfor %}
+						<div class="mt-4 col-lg-6 col-lg-6">
+							<div class="card">
+								<button type="submit" style="width:100%; height:100%"
+										class="btn btn-success"
+										name="Add-new-service"><strong>+</strong>
+								</button>
 							</div>
 						</div>
 					</div>
-				</form>
+				</div>
 			</div>
-			<!-- /.container-fluid -->
 		</div>
-		<!-- End of Main Content -->
-		<!-- Topbar Navbar -->
-		<ul class="navbar-nav ml-auto">
-		</ul>
+		<!-- /.container-fluid -->
 	</div>
-	<!-- End of Content Wrapper -->
+	<!-- End of Main Content -->
+	<!-- Topbar Navbar -->
+	<ul class="navbar-nav ml-auto">
+	</ul>
 </div>
-<!-- End of Page Wrapper -->
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
 	<i class="fas fa-angle-up"></i>
 </a>
