--- a/templates/control_panel/our-team.html
+++ b/templates/control_panel/our-team.html
@@ -226,56 +226,105 @@
 					{% endif %}
 				</div>
 				{% endfor %}
-				<!-- Page Heading -->
-				<form method="POST">
-					{% csrf_token %}
-					<div class="card-deck mb-3">
-						<div class="card">
-							<div class="card-body d-sm-none ">
-								<button style="float: right;" class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-d"><a class="fa fa-arrow-down"></a>
-								</button>
-								<button class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-u"><a class="fa fa-arrow-up"></a>
-								</button>
+				<div class="card-deck mb-3">
+					<div class="form-row">
+						{% for team_mem in our_team %}
+							<div class="mt-4 col-lg-6 col-lg-6">
+								<div class="card card-deck">
+									<img class="card-img" src="{{ team_mem.img.url }}"
+										 alt="Card image cap">
+									<div class="card-body">
+										<form method="POST" enctype="multipart/form-data">
+											{% csrf_token %}
+											<div class="input-group mb-5">
+												<div class="custom-file">
+													<input type="file" class="custom-file-input"
+														   id="inputGroupFile01"
+														   aria-describedby="inputGroupFileAddon01"
+														   name="img">
+													<label class="custom-file-label"
+														   for="inputGroupFile01">Image</label>
+												</div>
+											</div>
+											<div class="form-row">
+												<div class="col">
+													<div class="form-group"><label><strong>Name</strong></label><input
+															class="form-control" type="text"
+															placeholder="{{ team_mem.title }}"
+															name="title">
+													</div>
+													<div class="form-group"><label><strong>Description</strong></label>
+														<textarea class="form-control" rows="2"
+																  placeholder="{{ team_mem.description }}"
+																  name="description"></textarea></div>
+												</div>
+											</div>
+											<div class="input-group mb-3">
+												<div class="input-group-prepend">
+													<span class="input-group-text"
+														  id="basic-addon1">Facebook</span>
+												</div>
+												<input type="text" class="form-control"
+													   placeholder="{{ team_mem.facebook }}"
+													   aria-label="Username" aria-describedby="basic-addon1"
+													   name="facebook">
+											</div>
+											<div class="input-group mb-3">
+												<div class="input-group-prepend">
+													<span class="input-group-text"
+														  id="basic-addon1">Twitter</span>
+												</div>
+												<input type="text" class="form-control"
+													   placeholder="{{ team_mem.twitter }}"
+													   aria-label="Username" aria-describedby="basic-addon1"
+													   name="twitter">
+											</div>
+											<div class="input-group mb-3">
+												<div class="input-group-prepend">
+													<span class="input-group-text"
+														  id="basic-addon1">Instagram</span>
+												</div>
+												<input type="text" class="form-control"
+													   placeholder="{{ team_mem.instagram }}"
+													   aria-label="Username" aria-describedby="basic-addon1"
+													   name="instagram">
+											</div>
+											<div class="input-group mb-3">
+												<div class="input-group-prepend">
+													<span class="input-group-text"
+														  id="basic-addon1">Telegram</span>
+												</div>
+												<input type="text" class="form-control"
+													   placeholder="{{ team_mem.telegram }}"
+													   aria-label="Username" aria-describedby="basic-addon1"
+													   name="telegram">
+											</div>
+											<button style="float: right;" class="btn btn-primary"
+													value="{{ team_mem.id }}" type="submit"
+													name="save">Save
+											</button>
+											<button class="btn btn-danger"
+													value="{{ team_mem.id }}" type="submit"
+													name="remove-mem">Remove
+											</button>
+										</form>
+									</div>
+								</div>
 							</div>
-							<div class="card-body d-none d-sm-block">
-								<button style="float: right;" class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-d"><a class="fa fa-angle-right"></a>
-								</button>
-								<button class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="m-u"><a class="fa fa-angle-left"></a>
-								</button>
+						{% endfor %}
+						<div class="mt-4 col-lg-6 col-lg-6">
+							<div class="card">
+								<form method="POST">
+									{% csrf_token %}
+									<button type="submit" style="width:100%; height:100%"
+											class="btn btn-success"
+											name="Add-mem"><strong>+</strong>
+									</button>
+								</form>
 							</div>
-							<img class="card-img" src="https://via.placeholder.com/64"
-								 alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title">Card title</h5>
-								<p class="card-text">This is a longer card with supporting text below as a natural
-													 lead-in
-													 to additional content. This content is a little bit longer.</p>
-								<button style="float: right;" class="btn btn-primary"
-										value="{{ slide.object.id }}" type="submit"
-										name="save">Save
-								</button>
-								<button class="btn btn-danger"
-										value="{{ slide.object.id }}" type="submit"
-										name="save">Remove
-								</button>
-							</div>
-						</div>
-						<div class="card">
-							<button type="submit" style="width:100%; height:100%"
-									class="btn card-img-bottom btn-success btn-lg btn-block"
-									name="Add-new-video"><strong>+</strong>
-							</button>
 						</div>
 					</div>
-				</form>
+				</div>
 			</div>
 			<!-- /.container-fluid -->
 		</div>
